--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMS sites</title>
-     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="public/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lumanosimo&family=Open+Sans:wght@500&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
     <main>
     <header>
         <div class="title">
-            <img src="img/six.jpg" alt="" width="35px">
+            <img src="public/img/six.jpg" alt="" width="35px">
             <h1>sms sites</h1>    
         </div>
           <button class="bu" type="button"></button>
